# mdoc

./: .buildinfo  .gitignore  about.html  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json  test.html  usage.html
.github/workflows/: sphinx.yml
_sources/: about.md.txt
docs/source/: about.md  conf.py  index.rst  test.md  usage.rst
